re PR rtl-optimization/47899 (ICE in get_loop_body, at cfgloop.c:831)

PR rtl-optimization/47899
	* cfgloopmanip.c (fix_bb_placements): Fix first argument
	to flow_loop_nested_p when moving the loop upward.

	* gcc.dg/pr47899.c: New test.

From-SVN: r170699